
[project]
name = "Telethon"
description = "Full-featured Telegram client library"
authors = [
  { name="Lonami", email="totufals@hotmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["telegram", "chat", "messaging", "mtproto", "telethon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
  "pyaes~=1.6",
  "rsa~=4.9",
  "markdown-it-py~=3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
cryptg = ["cryptg~=0.4"]
dev = [
  "isort~=5.12",
  "black~=23.3.0",
  "mypy~=1.3",
  "ruff~=0.0.292",
  "pytest~=7.3",
  "pytest-asyncio~=0.21",
]
doc = [
  "sphinx_rtd_theme~=1.2",
  "types-docutils~=0.20",
]

[project.urls]
"Homepage" = "https://telethon.dev/"
"Source" = "https://telethon.dev/code/"
"Documentation" = "https://telethon.dev/docs/"
"Bug Tracker" = "https://telethon.dev/issues/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "backend"
backend-path = ["build_backend"]

[tool.setuptools.dynamic]
version = {attr = "telethon.version.__version__"}

[tool.ruff]
ignore = [
  "E501",  # formatter takes care of lines that are too long besides documentation
]
